# AccelEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODOs.txt  profiling.txt  skipped.txt
.cache/clangd/index/: ParticleContact.cpp.8C1EE635E578931E.idx  ParticleContact.h.D7BAED1300BC0B79.idx  SDL.h.35D5BDC7B41C16C1.idx  SDL_assert.h.C38697854E60B0CB.idx  SDL_asyncio.h.90F728801DDD5937.idx  SDL_atomic.h.8637490D6427AE45.idx  SDL_audio.h.23FECEDC45FDF0E4.idx  SDL_begin_code.h.3EC4586A028C8C0A.idx  SDL_bits.h.CB12AE0CF00307E1.idx  SDL_blendmode.h.3C4F9CDA494F3463.idx  SDL_camera.h.F9FD90EF514E1354.idx  SDL_clipboard.h.2024B95C7F6B5ECF.idx  SDL_close_code.h.66138C9C201C1165.idx  SDL_cpuinfo.h.BE0DEA91ABF5B878.idx  SDL_dialog.h.F7FFB825D2A979E8.idx  SDL_endian.h.FE5DB36FF1E7094D.idx  SDL_error.h.DCCFF4AF2D2C3B0D.idx  SDL_events.h.8AA2C489C4186A05.idx  SDL_filesystem.h.F59878C8958B9D02.idx  SDL_gamepad.h.C72E9163CC757F19.idx  SDL_gpu.h.0A7CADDAD985F4A6.idx  SDL_guid.h.0E43C2698D1F3A2B.idx  SDL_haptic.h.A8A7EC5D5090FC05.idx  SDL_hidapi.h.87413967DDD7C543.idx  SDL_hints.h.1C23E8ABADE5A054.idx  SDL_init.h.C5F81763B13787B4.idx  SDL_iostream.h.F682B14EFD173D72.idx  SDL_joystick.h.F9312A2C41B7EB2D.idx  SDL_keyboard.h.09C2C7AD0A5797CE.idx  SDL_keycode.h.72EA8E9A78E1D062.idx  SDL_loadso.h.FF0540A452418382.idx  SDL_locale.h.5AB32D51BD33EACF.idx  SDL_log.h.A87EFB17D9A8A251.idx  SDL_messagebox.h.40D0760DD0505C71.idx  SDL_metal.h.D661627479B2689E.idx  SDL_misc.h.9627E830127572D5.idx  SDL_mouse.h.21236C78B9A4EE4A.idx  SDL_mutex.h.5866620F7F12F0B7.idx  SDL_oldnames.h.6BA4F2A066CA8214.idx  SDL_pen.h.10A1E3E6BB6C4B13.idx  (+42 more)
AccelEngine/: CMakeLists.txt
AccelEngine/include/AccelEngine/: BVH.h  ForceGenerator.h  ForceRegistry.h  ParticleContact.h  ParticleLinks.h  ParticleWorld.h  body.h  collision_coarse.h  collision_narrow.h  collision_resolve.h  collision_resolver.h  core.h  joint.h  narrow_collision.h  particle.h  pfgen.h  precision.h  profiler.h  world.h
AccelEngine/src/: BVH.cpp  ParticleContact.cpp  ParticleWorld.cpp  collision_coarse.cpp  collision_narrow.cpp  collision_resolve.cpp  collision_resolver.cpp  narrow_collision.cpp  particle.cpp  pfgen.cpp
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/include/: InputActions.h  InputManager.h  UI.h  game.h  renderer2D.h
Sandbox/include/demo/: allDemo.h  bridgeDemo.h  carDemo.h  clothDemo.h  demo.h  dominoDemo.h  engineDemo.h  frictionDemo.h  logoDemo.h  newtonCradle.h  restitutionDemo.h  seeSaw.h  softBodyDemo.h  stressDemo.h
Sandbox/src/: InputActions.cpp  InputManager.cpp  UI.cpp  game.cpp  main.cpp  renderer2D.cpp
